# DigitalVision

./: CMakeLists.txt  CMakeLists.txt.user.95d4e81  main.cpp
controllers/: CMakeLists.txt  cameracontroller.cpp  cameracontroller.h  displaycontroller.cpp  displaycontroller.h  mainController.h  maincontroller.cpp  sharecontroller.cpp  sharecontroller.h
view/: CMakeLists.txt  imagelabel.h  imagelabel.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
